--- a/mi-porfolio.css
+++ b/mi-porfolio.css
@@ -17,11 +17,14 @@ header {
   justify-content: space-between;
 }
 
-header h1 {
+h1 {
   font-size: 36px;
   color: brown;
   margin-top: 20px;
   margin-left: 30px;
+  margin-left: 80px;
+  font-size: 40px;
+  border-right: 10px solid brown;
 
 
 }
@@ -35,6 +38,7 @@ nav{
 nav a {
   margin-top: 85px;
   margin-left: 15px;
+  margin-right: 15px;
   font-size: 24px;
   color: brown;
   text-decoration: none;
@@ -46,6 +50,7 @@ nav a:hover {
   text-decoration: underline;
 }
 
+/*This gives the size of my banner on my website it also tells it how much space it should have from the top*/
 .banner {
   height: 150px;
   margin-top: 20px;
@@ -57,3 +62,117 @@ nav a:hover {
   height: 100%;
   object-fit: cover;
 }
+
+/*added the styles for the about me section here*/
+#aboutme {
+  display: flex;
+  flex-direction:end;
+  flex-wrap: wrap;
+  margin-top: 30px;
+  line-height: 40px;
+}
+
+/*Played around with the width this shows how it will appear on my webiste*/
+
+#aboutme img {
+  margin-left: 40px;
+  border: 2px solid red;
+  width: 500px;
+  border-radius: 20% ;
+  object-fit: cover;
+
+}
+
+#aboutme p{
+  font-size: 20px;
+  color: brown;
+  margin-left: 10px;
+  
+}
+/*here I wanted 1 of my divs to be bigger than the rest added the titles to my projects  */
+#work {
+  display: grid;
+  grid-template-columns: 1f 1fr 1fr;
+  grid-template-rows: 200px 200px;
+  gap: 40px;
+  margin-top: 50px;
+  margin-right: 50px; /*added this as I wanted a little space towards the right of this section */
+}
+
+/*here i let the divs where I wanted them allowing me to have one bigger than the other one */
+.project1 {
+grid-column: 2/4;
+grid-row: 1;
+}
+/*these two are position next to each other reflecting the same size*/
+.project2 {
+  grid-row:2;
+  grid-column: 2;
+}
+
+.project3 {
+ grid-row: 2;
+ grid-column: 3;
+}
+/*my images were way to big at the time of attaching them to my website, made them be the size of my div with the following*/
+#work img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  margin-right: 25px;
+  border: 2px solid brown;
+ 
+}
+
+#work img:hover {
+  opacity: 1;
+}
+/*wanted to add a little space inside my element */
+
+.title {
+  font-size: 12px;
+  padding: 4px;
+  background-color: red;
+  color: black;
+  position: absolute;
+
+  }
+/*gave my page a height here and wanted everything to wrap when the you resize the window*/
+  #contactme {
+    margin-top: 50px;
+    height: 200px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
+  }
+ 
+  /*wanted to make sure there was space at the top added color to my text as well*/
+
+  #contactme p {
+    color: brown;
+    margin-top: 30px;
+    font-size: 20px;
+    
+  }
+
+  #contactme a {
+    color: brown;
+    margin-top: 30px;
+    font-size: 20px;
+    text-decoration: none;
+  }
+
+  #contactme a:hover {
+    color: red;
+  }
+/*also wanted my ending on the page to have a height wanted my text to reflect in the middle */
+  footer {
+    height: 100px;
+    margin-top: 50px;
+    text-align: center;
+    font-size: 20px;
+    color: brown;
+  }
+
+  @media (max-width:)
