--- a/mi-porfolio.css
+++ b/mi-porfolio.css
@@ -1,77 +1,82 @@
  /*added this here so no pre install styles would be applied */
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
-}
+ * {
+   padding: 0;
+   margin: 0;
+   box-sizing: border-box;
+   font-family: Arial, Helvetica, sans-serif;
+ }
 
-/*Added all my style properties to the header and the body*/
-body {
-  background-color: rgb(133, 116, 116);
-}
+ /*Added all my style properties to the header and the body*/
+ body {
+   background-color: rgb(133, 116, 116);
+ }
 
-header {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-header h1 {
-  color: brown;
-  margin-top: 20px;
-  margin-left: 20px;
-  font-size: 60px;
-}
-.test>h1 {
-  flex: 0 0 20%; 
-  text-align: right;
-  font-size: 36px;
-  color: brown;
-  margin-top: 20px;
-  margin-left: 30px;
-  margin-left: 80px;
-  font-size: 40px;
-  border-right: 10px solid brown;
+ header {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+ }
+
+ header h1 {
+   color: brown;
+   margin-top: 20px;
+   margin-left: 20px;
+   font-size: 60px;
+ }
+
+ .test>h1 {
+   flex: 0 0 20%;
+   text-align: right;
+   font-size: 36px;
+   color: brown;
+   margin-top: 20px;
+   margin-left: 30px;
+   margin-left: 80px;
+   font-size: 40px;
+   border-right: 10px solid brown;
 
 
-}
-/*here I wanted to make sure that the child follows the parent element display*/
-nav{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
+ }
 
-nav a {
-  margin-top: 85px;
-  margin-left: 15px;
-  margin-right: 15px;
-  font-size: 24px;
-  color: brown;
-  text-decoration: none;
-}
-/*added some hovering effects to my nav bar with these elements here*/
-nav a:hover {
-  cursor: pointer;
-  color: red;
-  text-decoration: underline;
-}
+ /*here I wanted to make sure that the child follows the parent element display*/
+ nav {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+ }
 
-/*This gives the size of my banner on my website it also tells it how much space it should have from the top*/
-.banner {
-  height: 150px;
-  margin-top: 20px;
+ nav a {
+   margin-top: 85px;
+   margin-left: 15px;
+   margin-right: 15px;
+   font-size: 24px;
+   color: brown;
+   text-decoration: none;
+ }
 
-}
-/*adjusted my image here to the divs height*/
-.banner img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+ /*added some hovering effects to my nav bar with these elements here*/
+ nav a:hover {
+   cursor: pointer;
+   color: red;
+   text-decoration: underline;
+ }
 
-/*added the styles for the about me section here*/
-/* #aboutme {
+ /*This gives the size of my banner on my website it also tells it how much space it should have from the top*/
+ .banner {
+   height: 150px;
+   margin-top: 20px;
+
+ }
+
+ /*adjusted my image here to the divs height*/
+ .banner img {
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+ }
+
+ /*added the styles for the about me section here*/
+ /* #aboutme {
   display: flex;
   flex-direction:end;
   flex-wrap: wrap;
@@ -79,74 +84,83 @@ nav a:hover {
   line-height: 40px;
 } */
 
-/*Played around with the width this shows how it will appear on my webiste*/
+ /*Played around with the width this shows how it will appear on my webiste*/
 
-#aboutme img {
-  margin-left: 40px;
-  border: 2px solid red;
-  width: 500px;
-  border-radius: 20% ;
-  object-fit: cover;
+ #aboutme img {
+   margin-left: 40px;
+   border: 2px solid red;
+   width: 500px;
+   border-radius: 20%;
+   object-fit: cover;
 
-}
+ }
 
-#aboutme p{
-  font-size: 20px;
-  color: brown;
-  margin-left: 10px;
-  
-}
-/*here I wanted 1 of my divs to be bigger than the rest added the titles to my projects  */
-.test {
-  display: flex;
-  gap: 40px;
-  margin-top: 50px;
-  margin-right: 50px; /*added this as I wanted a little space towards the right of this section */
-}
-.test2 {
-  display: grid;
-  gap: 40px;
-}
-/*here i let the divs where I wanted them allowing me to have one bigger than the other one */
-.project1 {
-grid-column: 2/4;
-grid-row: 1;
-}
-/*these two are position next to each other reflecting the same size*/
-.project2 {
-  grid-row:2;
-  grid-column: 2;
-}
+ #aboutme p {
+   font-size: 20px;
+   color: brown;
+   margin-left: 10px;
 
-.project3 {
- grid-row: 2;
- grid-column: 3;
-}
-/*my images were way to big at the time of attaching them to my website, made them be the size of my div with the following*/
-#work img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  margin-right: 25px;
-  border: 2px solid brown;
- 
-}
+ }
 
-#work img:hover {
-  opacity: 1;
-}
-/*wanted to add a little space inside my element */
+ /*here I wanted 1 of my divs to be bigger than the rest added the titles to my projects  */
+ .test {
+   display: flex;
+   gap: 40px;
+   margin-top: 50px;
+   margin-right: 50px;
+   /*added this as I wanted a little space towards the right of this section */
+ }
 
-.title {
-  font-size: 12px;
-  padding: 4px;
-  background-color: red;
-  color: black;
-  position: absolute;
+ .test2 {
+   display: grid;
+   grid-template-rows: 1fr;
+   gap: 40px;
+ }
 
-  }
-/*gave my page a height here and wanted everything to wrap when the you resize the window*/
-  /* #contactme {
+ /*here i let the divs where I wanted them allowing me to have one bigger than the other one */
+ .project1 {
+   grid-column: 2/4;
+   grid-row: 1;
+ }
+
+ /*these two are position next to each other reflecting the same size*/
+ .project2 {
+   grid-row: 2;
+   grid-column: 2;
+ }
+
+ .project3 {
+   grid-row: 2;
+   grid-column: 3;
+ }
+
+ /*my images were way to big at the time of attaching them to my website, made them be the size of my div with the following*/
+ #work img {
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+   margin-right: 25px;
+   border: 2px solid brown;
+
+ }
+
+ #work img:hover {
+   opacity: 1;
+ }
+
+ /*wanted to add a little space inside my element */
+
+ .title {
+   font-size: 12px;
+   padding: 4px;
+   background-color: red;
+   color: black;
+   position: absolute;
+
+ }
+
+ /*gave my page a height here and wanted everything to wrap when the you resize the window*/
+ /* #contactme {
     margin-top: 50px;
     height: 200px;
     display: flex;
@@ -155,51 +169,47 @@ grid-row: 1;
 
   }
   */
-  /*wanted to make sure there was space at the top added color to my text as well*/
+ /*wanted to make sure there was space at the top added color to my text as well*/
 
-  #contactme p {
-    color: brown;
-    margin-top: 30px;
-    font-size: 20px;
+ #contactme p {
+   color: brown;
+   margin-top: 30px;
+   font-size: 20px;
+
+ }
+
+ #contactme a {
+   color: brown;
+   margin-top: 30px;
+   font-size: 20px;
+   text-decoration: none;
+ }
+
+ #contactme a:hover {
+   color: red;
+ }
+
+ /*also wanted my ending on the page to have a height wanted my text to reflect in the middle */
+ footer {
+   height: 100px;
+   margin-top: 50px;
+   text-align: center;
+   font-size: 20px;
+   color: brown;
+ }
+
+ /*added this here so when my screen got smaller they would be colums and my page wouldn't look funky */
+ @media screen and (max-width:960px) {
+  .test {
+    display: flex;
+    flex-direction: column;
     
   }
-
-  #contactme a {
-    color: brown;
-    margin-top: 30px;
-    font-size: 20px;
-    text-decoration: none;
+  /*added this here it made img in the about me section look smaller and more centered */
+  #aboutme img {
+    width: 100%;
+    object-fit: contain;
   }
+ }
 
-  #contactme a:hover {
-    color: red;
-  }
-/*also wanted my ending on the page to have a height wanted my text to reflect in the middle */
-  footer {
-    height: 100px;
-    margin-top: 50px;
-    text-align: center;
-    font-size: 20px;
-    color: brown;
-  }
-/*followd example from previous lesson for this one */
-  @media screen and (max-width:992px) {
-   #work {
-    width: 50%;
-   }
-   #about {
-    width: 50%;
-   }
-
-  }
-   
-
-  @media screen and (min-width: 768) {
-    #work {
-      width: 100%;
-    }
-    #about {
-      width: 100%;
-    }
-  }
-
+ /*Have to give a lot of credit to the TA he helped me out so much!!!*/
